--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.0"
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
+    "i18next": "^23.2.11",
+    "on-change": "^4.0.2",
+    "yup": "^1.2.0"
   }
 }
